# vacancies_hhru_SQL

./: .flake8  README.md  database.ini  pyproject.toml
src/: base_module.py  config_module.py  db_manager.py  user_interaction.py  vacancy_hh.py
