[tool.poetry]
name = "\"vacancies-hhru-sql\""
version = "0.1.0"
description = ""
authors = ["\"Artur Koltyrin\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
